--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,6 @@ docopt==0.6.2
 idna==2.9
 idna-ssl==1.1.0
 itsdangerous==1.1.0
-Jinja2==2.11.1
 lxml==4.5.0
 MarkupSafe==1.1.1
 multidict==4.7.5
@@ -30,3 +29,4 @@ Werkzeug==1.0.0
 wincertstore==0.2
 yarg==0.1.9
 yarl==1.4.2
+zipp==3.1.0
